Updating Grails, adding Gradle wrapper

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-# .gitignore for Grails 1.2 and 1.3
-# Although this should work for most versions of grails, it is
-# suggested that you use the "grails integrate-with --git" command
-# to generate your .gitignore file.
-
 # web application files
 /web-app/WEB-INF/classes
 
@@ -31,3 +26,9 @@
 
 # "temporary" build files
 /target
+
+*.iml
+.idea
+build
+.gradle
+out
