--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
-grailsVersion=3.1.0
+grailsVersion=3.2.9
+assetPipelineVersion=3.2.1
+assetPipelineGradleVersion=2.14.3
+grailsSpringWebsocketVersion=2.3.0
+quartzVersion=2.0.12
